fix(ui): user page example text set to small and centered

--- a/imports/ui/pages/user/user.html
+++ b/imports/ui/pages/user/user.html
@@ -288,9 +288,9 @@
                                 {{competency.shortCode}}: {{competency.description}}
                             </div>
                             <hr class="border-light">
-                            <div class="d-block">
+                            <small class="d-block text-center">
                                 {{exampleText competency._id}}
-                            </div>
+                            </small>
                             <div class="d-block text-center">
                                 {{> icon name="undo"}}
                             </div>
