--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8">
-    <meta name="application-name" content="lea.teacher">
-    <meta name="description" content="Kursleitenden Dashboard">
+    <meta name="application-name" content="lea.online Dashboard">
+    <meta name="description" content="lea.online Kursleitenden Dashboard">
     <meta name="viewport"
           content="initial-scale=1, maximum-scale=5, minimum-scale=-5"/>
     <meta name="theme-color" content="#FF00AA">
@@ -13,7 +13,7 @@
     <link rel="mask-icon" href="/icons/mask-icon.svg" color="#f5f5f5">
     <link rel="fluid-icon" href="/icons/fluidicon.png" title="otu.lea">
 
-    <title>leaonline-teacher</title>
+    <title>lea.online Dashboard</title>
 
     <noscript>
         <style>
